# the_great_plague

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
assets/: logo.txt
assets/abilities/: abilities.txt
assets/areas/: t01_shore.txt  t02_forest.txt  t03_city_gate.txt
assets/areas/00_introduction/: description.txt  image.txt
assets/areas/01_shore/: conversation.txt  description.txt  image.txt
assets/areas/02_forest/: description.txt  image.txt
assets/areas/03_city_gate/: combat_intro.txt  description.txt  image.txt
assets/areas/03_city_gate/enemies/: e1.txt  e2.txt
assets/areas/04_inn/: conversation.txt  description.txt  image.txt  innkeeper.txt
assets/areas/05_town_square/: description.txt  image.txt
assets/characters/: dansea.txt
assets/characters/dansea/: dansea.txt  dansea_introduction.txt
assets/characters/dog/: dog.txt
assets/other/: combat_image.txt
include/: abilities.hpp  areas.hpp  character_creator.hpp  characters.hpp  combat_system.hpp  conversation_system.hpp  dice.hpp  entities.hpp  files.hpp  inventory.hpp  inventory_manager.hpp  status_effects.hpp  utils.hpp
src/: CMakeLists.txt  abilities.cpp  abilities.hpp  areas.cpp  areas.hpp  character_creator.cpp  character_creator.hpp  characters.cpp  combat_system.cpp  combat_system.hpp  conversation_system.cpp  dice.cpp  dice.hpp  files.cpp  inventory.cpp  inventory_manager.cpp  inventory_manager.hpp  main.cpp  status_effects.cpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  files_test.cpp  utils_test.cpp
